--- a/assets/main/sass/layout/_home.scss
+++ b/assets/main/sass/layout/_home.scss
@@ -21,7 +21,6 @@
 
 			&:first-child {
 				border-top: 0;
-				padding-top: 0;
 			}
 		}
 
@@ -53,7 +52,7 @@
 				}
 
 				> div.kg-width-full:first-child {
-					margin-top: -2rem;
+					margin-top: -4rem;
 				}
 
 				> div.kg-width-full:last-child {
